# audio-transcription-mcp

./: .env.example  .gitignore  README.md  jNQXAC9IVRw.json  jNQXAC9IVRw.txt  pyproject.toml  server.py
core/: chunker.py  formatter.py  groq_backend.py  installer.py  local_backend.py  source_resolver.py
